<resources>
    <string name="app_name">LittlePoint</string>

    <string name="action_settings">Settings</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="menu_settings">Settings</string>
<string name="action_search">Search</string>

    <string name="hello_world">Hello world!</string>

    <string name="b">b</string>
    <string name="a">a</string>
    <string name="c">c</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_settings">Settings</string>
    <string name="home">home</string>
    <string name="favourite">收藏</string>
    <string name="settings">设置</string>
    <string name="section_title">选择</string>
    <string name="downloaded">下载</string>


</resources>
