<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_listview"
        android:title="ListView" />

    <!--<item-->
    <!--android:id="@+id/action_recyclerview"-->
    <!--android:title="RecyclerView" />-->

    <item
        android:id="@+id/action_viewpager"
        android:title="ViewPager" />

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/drawer_favourite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favourite" />

        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

    </group>

    <item
        android:id="@+id/section"
        android:title="@string/section_title">
        <menu>
            <item
                android:id="@+id/drawer_downloaded"
                android:icon="@drawable/ic_file_download"
                android:title="@string/downloaded" />
        </menu>
    </item>


    <!--<item-->
    <!--android:id="@+id/action_spinner"-->
    <!--android:title="Spinner" />-->
</menu>