<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
        name="viewModel"
        type="com.then.littlepoint.model.item.view.ViewPagerModel" />


    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <android.support.design.widget.TabLayout
                android:id="@+id/tab"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabMode="scrollable" />

            <android.support.v4.view.ViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:itemView="@{viewModel.itemView}"
                app:items="@{viewModel.items}"
                app:pageTitles="@{viewModel.pageTitles}" >
            </android.support.v4.view.ViewPager>
        </LinearLayout>



            <com.wangjie.rapidfloatingactionbutton.rfabgroup.RapidFloatingActionButtonGroup
                android:id="@+id/rfab_group_sample_rfabg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                >

                <com.wangjie.rapidfloatingactionbutton.RapidFloatingActionButton
                    android:id="@+id/rfab_group_sample_rfab_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:rfab_size="normal"
                    app:rfab_drawable="@drawable/rfab__drawable_rfab_default"
                    app:rfab_color_normal="#d84315"
                    app:rfab_color_pressed="#bf360c"
                    app:rfab_shadow_radius="7dp"
                    app:rfab_shadow_color="#999999"
                    app:rfab_shadow_dx="0dp"
                    app:rfab_shadow_dy="5dp"
                    app:rfab_identification_code="@string/a"
                    />

                <com.wangjie.rapidfloatingactionbutton.RapidFloatingActionButton
                    android:id="@+id/rfab_group_sample_rfab_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:rfab_size="normal"
                    app:rfab_drawable="@mipmap/ic_launcher"
                    app:rfab_color_normal="#283593"
                    app:rfab_color_pressed="#1a237e"
                    app:rfab_shadow_radius="7dp"
                    app:rfab_shadow_color="#999999"
                    app:rfab_shadow_dx="0dp"
                    app:rfab_shadow_dy="5dp"
                    app:rfab_identification_code="@string/b"
                    />

                <com.wangjie.rapidfloatingactionbutton.RapidFloatingActionButton
                    android:id="@+id/rfab_group_sample_rfab_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:rfab_size="normal"
                    app:rfab_drawable="@mipmap/ic_launcher"
                    app:rfab_color_normal="#056f00"
                    app:rfab_color_pressed="#0d5302"
                    app:rfab_shadow_radius="7dp"
                    app:rfab_shadow_color="#999999"
                    app:rfab_shadow_dx="0dp"
                    app:rfab_shadow_dy="5dp"
                    app:rfab_identification_code="@string/c"
                    />

            </com.wangjie.rapidfloatingactionbutton.rfabgroup.RapidFloatingActionButtonGroup>
    </RelativeLayout>


</layout>
